--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "pack/local/opt/vdebug"]
 	path = pack/local/opt/vdebug
 	url = https://github.com/joonty/vdebug.git
+[submodule "pack/local/opt/fugitive"]
+	path = pack/local/opt/fugitive
+	url = https://github.com/tpope/vim-fugitive.git
