--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "pack/local/opt/fugitive"]
 	path = pack/local/opt/fugitive
 	url = https://github.com/tpope/vim-fugitive.git
+[submodule "pack/local/opt/targets"]
+	path = pack/local/opt/targets
+	url = https://github.com/wellle/targets.vim.git
