--- a/.gitmodules
+++ b/.gitmodules
@@ -5,3 +5,6 @@
 [submodule "pack/local/opt/editorconfig"]
 	path = pack/local/opt/editorconfig
 	url = https://github.com/editorconfig/editorconfig-vim.git
+[submodule "pack/local/opt/vdebug"]
+	path = pack/local/opt/vdebug
+	url = https://github.com/joonty/vdebug.git
